syntax="proto3";

service MoySklad {
    rpc getNeonAssortment(NeonRequest) returns (stream NeonItem);
    rpc getDeluxAssortment(DeluxRequest) returns (stream DeluxItem);
}

message NeonRequest {
}

message DeluxRequest {
}

message NeonItem {
    string id = 1;
    string name = 2;
    int32 balance = 3;
    int32 price = 4;
}

message DeluxItem {
    string id = 1;
    string category = 2;
    string variant = 3;
    string name = 4;
    int32 balance = 5;
    int32 price = 6;
}